# mdrs

./: .gitignore  Cargo.toml  README.md  build.rs  m68k-none-eabi.json  megadrive.ld  rust-toolchain.toml
.cargo/: config.toml
src/: header.S  main.rs
src/sys/: alloc.rs  fixed.rs  io.rs  libc.S  libc.rs  mod.rs  vdp.rs
